kubernetes/apps/sparkyfitness/sparkyfitness-backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sparkyfitness-backend
  namespace: sparkyfitness
  labels:
    app: sparkyfitness-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sparkyfitness-backend
  strategy: # Downtime at rollout, but clean PV release
    type: Recreate
  revisionHistoryLimit: 3 # Only keep latest 3 ReplicaSets
  template:
    metadata:
      labels:
        app: sparkyfitness-backend
    spec:
      automountServiceAccountToken: false
      dnsPolicy: ClusterFirst
      dnsConfig:
        searches:
          - sparkyfitness.svc.cluster.local # Allows to refer to the DB as 'sparkyfitness-db'
      containers:
        - name: sparkyfitness-backend
          image: codewithcj/sparkyfitness_server:v1.7.3
          ports:
            - containerPort: 3010
              name: http
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 800m
              memory: 512Mi
          volumeMounts:
            - mountPath: /app/SparkyFitnessServer/backup
              subPath: backup
              name: sparkyfitness-backend
            - mountPath: /app/SparkyFitnessServer/uploads
              subPath: uploads
              name: sparkyfitness-backend
            - mountPath: /run/secrets
              name: secret-files
              readOnly: true
      volumes:
        - name: sparkyfitness-backend
          persistentVolumeClaim:
            claimName: sparkyfitness-backend
        - name: secret-files
          secret:
            secretName: sparkyfitness-secrets
