kubernetes/apps/sparkyfitness/sparkyfitness-frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sparkyfitness-frontend
  namespace: sparkyfitness
  labels:
    app: sparkyfitness-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sparkyfitness-frontend
  strategy: # Downtime at rollout, but clean PV release
    type: RollingUpdate
  revisionHistoryLimit: 3 # Only keep latest 3 ReplicaSets
  template:
    metadata:
      labels:
        app: sparkyfitness-frontend
    spec:
      automountServiceAccountToken: false
      containers:
        - name: sparkyfitness-backend
          image: codewithcj/sparkyfitness:v1.7.3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 512Mi
          ports:
            - containerPort: 80
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 10
