kubernetes/apps/sparkyfitness/sparkyfitness-backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sparkyfitness-backend
  namespace: sparkyfitness
  labels:
    app: sparkyfitness-backend
spec:
  type: ClusterIP
  ports:
    - port: 3010
      protocol: TCP
      targetPort: http
  selector:
    app: sparkyfitness-backend
