kubernetes/apps/sparkyfitness/sparkyfitness-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: sparkyfitness-backend
  namespace: sparkyfitness
  labels:
    app: sparkyfitness-backend
spec:
  type: ClusterIP
  ports:
    - port: 3010 # From docs
  selector:
    app: sparkyfitness-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sparkyfitness-backend
  namespace: sparkyfitness
  labels:
    app: sparkyfitness-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sparkyfitness-backend
  strategy: # Downtime at rollout, but clean PV release
    type: Recreate
  revisionHistoryLimit: 3 # Only keep latest 3 ReplicaSets
  template:
    metadata:
      labels:
        app: sparkyfitness-backend
    spec:
      automountServiceAccountToken: false
      dnsPolicy: ClusterFirst
      dnsConfig:
        searches:
          - sparkyfitness.svc.cluster.local # Allows to refer to the DB as 'sparkyfitness-db'
      containers:
        - name: sparkyfitness-backend
          image: codewithcj/sparkyfitness_server:v1.6.4
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 800m
              memory: 512Mi
          volumeMounts:
            - mountPath: /app/SparkyFitnessServer/backup
              subPath: backup
              name: sparkyfitness-backend
            - mountPath: /app/SparkyFitnessServer/uploads
              subPath: uploads
              name: sparkyfitness-backend
            - mountPath: /run/secrets
              name: secret-files
              readOnly: true
      volumes:
        - name: sparkyfitness-backend
          persistentVolumeClaim:
            claimName: sparkyfitness-backend
        - name: secret-files
          secret:
            secretName: sparkyfitness-secrets
