kubernetes/apps/sparkyfitness/sparkyfitness-frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sparkyfitness-frontend
  namespace: sparkyfitness
  labels:
    app: sparkyfitness-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: sparkyfitness-frontend
