kubernetes/apps/sparkyfitness/sparkyfitness-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: sparkyfitness-frontend
  namespace: sparkyfitness
  labels:
    app: sparkyfitness-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: sparkyfitness-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sparkyfitness-frontend
  namespace: sparkyfitness
  labels:
    app: sparkyfitness-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sparkyfitness-frontend
  strategy: # Downtime at rollout, but clean PV release
    type: RollingUpdate
  revisionHistoryLimit: 3 # Only keep latest 3 ReplicaSets
  template:
    metadata:
      labels:
        app: sparkyfitness-frontend
    spec:
      automountServiceAccountToken: false
      dnsPolicy: ClusterFirst
      dnsConfig:
        searches:
          - sparkyfitness.svc.cluster.local # Allows to refer to the backend as `sparkyfitness-backend`
      containers:
        - name: sparkyfitness-backend
          image: codewithcj/sparkyfitness:v1.6.3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 512Mi
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sparkyfitness-internal
  namespace: sparkyfitness
spec:
  ingressClassName: traefik-tailscale
  entryPoints:
    - websecure
  routes:
    - match: Host(`sparkyfitness.internal.dmhosted.com`)
      kind: Rule
      services:
        - name: sparkyfitness-frontend
          port: 80
  tls:
    secretName: sparkyfitness-internal-cert
